<resources>
    <string name="app_name">Arithmos</string>
    <string name="action_settings">Settings</string>
    <string name="number_before_x">%d x</string>
    <string name="number_after_x">x %d</string>
    <string name="save_button_text">Save</string>
    <string name="exit_button_text">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="loading">Loading &#8230;</string>
    <string name="percent">%d%%</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Thank you for trying Arithmos.
        \nLet\'s start learning how to play.</string>
    <string name="lets_go">Let\'s go</string>
    <string name="no_thanks">No thanks</string>
    <string name="got_it"><u>Got it</u></string>
    <string name="skip"><u>Skip</u></string>
    <string name="ok_underlined"><u>OK</u></string>
    <string name="quit_tutorial_message">You can restart the tutorial from the action bar menu</string>
    <string name="action_start_tutorial">Start tutorial</string>
    <string name="sign_in_lesson">First, you want to sign in to Google Play Games and allow sharing.
    \nYou can still play without signing in, but you won\'t be able to view leaderboards,
    \nearn achievements, play match games, or sync across devices.</string>
    <string name="manual_sign_in_lesson">You can always sign in later if you decide you do want to use these features.</string>
    <string name="auto_sign_in_lesson">Now you will be signed in automatically unless you manually sign out.</string>
    <string name="challenges_button_lesson">Arithmos is broken into different challenges, each with a simple theme.
    \nEach challenge has several levels with different styles of gameplay.
    \nEvery time you play a level it will be a little different.</string>
    <string name="level_selection_lesson">Start by choosing the first level in Crazy Eights.</string>
    <string name="level_types_lesson">There are three basic styles of gameplay.
    \nAt the start of each level, there will be a popup that explains what the goal is,
    \nas well as other information about the level.
    \nPress start when you are ready.</string>
    <string name="goal_types_lesson">For whatever style of gameplay this level has,
    \nthe goal will be displayed here.</string>
    <string name="selection_lesson">To make a play, drag to select two or more numbers on the gameboard that can be used
    with some combination of +, −, ×, and ÷ to equal one of these numbers.
    \nTry it now.</string>
    <string name="scoring_lesson">This popup shows how runs are scored</string>
    <string name="auto_selection_lesson">To start, you have to select the operations yourself.  After you correctly
        use a given number of operations four times, you will unlock auto-pick for that number of operations.</string>
    <string name="manual_selection_lesson">You can switch to and from auto-pick mode with this button.  In 301 games, auto-pick is
        disabled and you will always have to pick your operations.</string>
    <string name="specials_lesson">These are specials that allow you to get a little advantage when you need it.
    \nThere will be more on these later.</string>
    <string name="play_level_lesson">Try out this level and we\'ll pick up with the tutorial later.</string>
    <string name="game_over_lesson">When you have met the goal you will get a notification and unlock the next level.
        The level will end when there are no more possible moves. If you
    have succeeded in meeting the goal for the level, you can move on to the next level.</string>
    <string name="activity_lesson">The Activity button let\'s see the levels that you\'ve played,
    as well as saved games and matches.</string>
    <string name="special_store_lesson">The Specials buttons will show you a list of available specials
        with descriptions of their uses. As you play levels, you will gather jewels.
        These jewels can be traded for more specials.</string>
    <string name="achievements_lesson">Lastly, the Achievements button will show you your achievements.
        As you achieve special milestones, you will unlock achievements
        that will increase your player\'s XP.</string>
    <string name="tutorial_complete_lesson">Thanks it. Have fun!</string>
    <string name="activity_button_text">Activity</string>
    <string name="challenge_button_text">Challenges</string>
    <string name="specials_button_text">Specials</string>
    <string name="achievemtns_button_text">Achievements</string>
    <string name="match_button_text">Start match</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_underlined"><u>Sign out</u></string>
    <string name="reset_game_message">Reset challenge progress, activity history, and saved games.  Jewels and specials will be saved.</string>
    <string name="reset_game_progress_message">Resetting game &#8230;</string>
    <string name="more_jewels_text">Get more stuff</string>
    <string name="use_google_play_prompt">Many features of this game require the use of Google Play Games.  Without signing in
        you will not be able to play match games, track achievements, view leaderboards, or sync your game across devices.
        \nAttempt to sign-in again?</string>
    <string name="not_signed_in">Please sign in to Google Play</string>
    <string name="action_open_level_designer">Open level designer</string>
    <string name="empty_activity_item">No recent activity</string>
    <string name="continue_text">Continue</string>
    <string name="replay_text">Replay</string>
    <string name="saved_game_text">Saved game</string>
    <string name="level_completed">Level completed</string>
    <string name="level_incomplete">Level incomplete</string>
    <string name="match_invitation">Invitation to play a match</string>
    <string name="accept_invitation">Accept</string>
    <string name="accept_invitation_progress">Accepting invitation &#8230;</string>
    <string name="match_my_turn">My turn</string>
    <string name="take_my_turn">Take turn</string>
    <string name="match_their_turn">Their turn</string>
    <string name="match_complete">Match complete</string>
    <string name="rematch">Rematch</string>
    <string name="dismiss">Dismiss</string>
    <string name="decline">Decline</string>
    <string name="remove">Remove</string>
    <string name="leave">Leave</string>
    <string name="x_of_x_levels">%1$d of %2$d levels passed</string>
    <string name="match_turn_taken_alert">%1$s took a turn</string>
    <string name="match_invitation_alert">%1$s invited you to play</string>
    <string name="match_completed_alert">%1$s finished the match</string>
    <string name="match_canceled_alert">%1$s canceled your match</string>
    <string name="all">All</string>
    <string name="all_underline"><u>All</u></string>
    <string name="matches">Matches</string>
    <string name="matches_underline"><u>Matches</u></string>
    <string name="saves">Saves</string>
    <string name="saves_underline"><u>Saves</u></string>
    <string name="history">History</string>
    <string name="history_underline"><u>History</u></string>
    <string name="xp">%d XP</string>
    <string name="iab_popup_title">In-app Store</string>
    <string name="buy">Buy</string>
    <string name="owned">Owned</string>
    <string name="jewel_purchase">%d jewels added to inventory</string>
    <string name="bomb_purchase">%d bombs added to inventory</string>
    <string name="order_history_popup_title">Order History</string>
    <string name="order_number">Order number: %s</string>
    <string name="product_id">Product id: %s</string>
    <string name="ads_removed_notification">Ads have been removed!</string>
    <string name="special_pkg_purchase">Added two of each special to your inventory</string>
    <string name="skip_description">Skips the current or first goal number in the list</string>
    <string name="bomb_description">Destroys the operation that sets off the bomb preventing its use for three turns</string>
    <string name="pencil_description">Allows a number to be changed</string>
    <string name="calc_description">Evaluates a run from start to end without following the order of operations like an old-school calculator.</string>
    <string name="zero_description">Changes a number on the board to zero</string>
    <string name="auto_run_description">Finds a run to meet the goal and you get the points</string>
    <string name="grid_numbers_hint"><b>Grid numbers</b> ex. 2, 3, 6, &#8230;</string>
    <string name="goal_numbers_hint"><b>Goal numbers</b> ex. 5, 6, 12, &#8230;</string>
    <string name="test_button_text">Test</string>
    <string name="goal_mult">List of multiple goal numbers</string>
    <string name="goal_301">Total of 301</string>
    <string name="goal_bouncing">Single bouncing goal number</string>
    <string name="grid_size_4">Grid size 4x4</string>
    <string name="grid_size_5">Grid size 5x5</string>
    <string name="grid_size_6">Grid size 6x6</string>
    <string name="grid_size_7">Grid size 7x7</string>
    <string name="grid_size_8">Grid size 8x8</string>
    <string name="grid_size_9">Grid size 9x9</string>
    <string name="grid_size_10">Grid size 10x10</string>
    <string name="of_x_to_pass">of %d to pass</string>
    <string name="add_predefined_run">Add pre-defined run</string>
    <string name="show_run">Show</string>
    <string name="add_run_hint">Numbers, +, -, *, or /</string>
    <string name="error_start_with_number">Run must start with a number</string>
    <string name="error_lock_between">Lock bonus must be between numbers</string>
    <string name="error_run_length">Run must contain at least two numbers</string>
    <string name="error_goal_list_length">Need at least one number</string>
    <string name="play_button_text">Play</string>
    <string name="error_loading_level">Error loading custom level</string>
    <string name="designer_purchase_toast">The Level Designer can be accessed from the action bar menu</string>
    <string name="bomb_message">for 3 turns</string>
    <string name="auto_pick_level_up">Unlocked auto-pick level %d</string>
    <string name="scoring_popup_title">Scoring</string>
    <string name="five_points">0&#8211;5 = 5 pts</string>
    <string name="ten_points">6&#8211;10 = 10 pts</string>
    <string name="twenty_points">11&#8211;20 = 20 pts</string>
    <string name="fifty_points">21&#8211;50 = 50 pts</string>
    <string name="hundred_points">over 50 = 100 pts</string>
    <string name="operation_points">Total multiplied by the number of operations used</string>
    <string name="lock_scoring">score X 3</string>
    <string name="jewel_points">= 25 pts</string>
    <string name="apple_points">= 50 pts</string>
    <string name="bananas_points">= 100 pts</string>
    <string name="cherries_points">= 150 pts</string>
    <string name="balloons_points">= 200 pts</string>
    <string name="action_show_scoring">Scoring info</string>
    <string name="scoring_info_toast">Scoring info can be accessed from the action bar menu</string>
    <string name="times_up">TIME\'S UP!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="unlock_level_x_x">Unlocked %1$s %2$s</string>
    <string name="next_level">Next level</string>
    <string name="retry">Retry</string>
    <string name="level_passed_message">Level passed! \nBonus round</string>
    <string name="submit_turn">Submit</string>
    <string name="end_turn">Turn finished</string>
    <string name="message_hint">Message</string>
    <string name="bonuses">Allow bonuses</string>
    <string name="auto_complete_math">Autocomplete equations</string>
</resources>