<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/activity_button_bar"
    android:gravity="center_vertical">
    <TextView android:id="@+id/all_button"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:textColor="@color/text_primary_dark"
        android:textSize="18sp"
        android:text="@string/all_underline"
        android:onClick="ActivityButtonBarClick"/>
    <TextView android:id="@+id/matches_button"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:textColor="@color/text_primary_dark"
        android:textSize="18sp"
        android:text="@string/matches"
        android:onClick="ActivityButtonBarClick"/>
    <TextView android:id="@+id/saves_button"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:textColor="@color/text_primary_dark"
        android:textSize="18sp"
        android:text="@string/saves"
        android:onClick="ActivityButtonBarClick"/>
    <TextView android:id="@+id/history_button"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:textColor="@color/text_primary_dark"
        android:textSize="18sp"
        android:text="@string/history"
        android:onClick="ActivityButtonBarClick"/>

</LinearLayout>