<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/welcome_popup">
    <LinearLayout android:id="@+id/pop_up_foreground"
        android:layout_width="wrap_content"
        android:minWidth="320dp"
        android:layout_height="wrap_content"
        android:minHeight="160dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="36dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner_primary">


        <TextView android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:textColor="@color/text_primary_light"
            android:textSize="@dimen/game_popup_xsmall_text_size"
            android:text="@string/welcome_message"
            android:visibility="visible"/>

        <android.support.v7.widget.AppCompatCheckBox android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dont_show_again"
            android:textColor="@color/text_primary_light"
            app:buttonTint="@color/primary_accent"
            android:clickable="true"
            android:checked="false"
            android:visibility="visible"/>

    </LinearLayout>

    <TextView android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_primary_accent"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/pop_up_foreground"
        android:layout_marginBottom="-36dp"
        android:elevation="8dp"
        android:textColor="@color/text_primary_light"
        android:textSize="@dimen/game_popup_large_text_size"
        android:text="@string/welcome"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pop_up_foreground"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="-8dp">
        <Button android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner_primary_accent"
            android:textColor="@color/text_primary_light"
            android:text="@string/no_thanks"
            android:visibility="visible"/>
        <Button android:id="@+id/center_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner_primary_accent"
            android:textColor="@color/text_primary_light"
            android:visibility="gone"/>
        <Button android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_corner_primary_accent"
            android:textColor="@color/text_primary_light"
            android:text="@string/lets_go"/>

    </LinearLayout>
</RelativeLayout>