<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/match_turn_end_popup">
    <LinearLayout
        android:layout_width="wrap_content"
        android:minWidth="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corner_primary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary_light"
            android:textSize="20sp"
            android:text="@string/end_turn"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <ImageView android:id="@+id/player_icon"
                android:layout_width="wrap_content"
                android:minWidth="60dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp" />
            <TextView android:id="@+id/player_comment"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:minWidth="60dp"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:padding="6dp"
                android:background="@drawable/speech_bubble"
                android:textColor="@color/text_primary_dark"
                android:textSize="12sp"/>
        </LinearLayout>
        <EditText android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minLines="2"
            android:hint="@string/message_hint"
            android:background="@drawable/rounded_corner_primary_light"/>

        <Button android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="end"
            android:background="@drawable/rounded_corner_primary_accent"
            android:textColor="@color/text_primary_light"
            android:text="@string/submit_turn"/>
        </LinearLayout>
</RelativeLayout>