<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/main_activity_top_linear_layout_height"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/pop_up">
    <RelativeLayout
        android:id="@+id/window_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corner_primary">
        <Spinner
            android:id="@+id/grid_size_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"/>
        <Spinner
            android:id="@+id/goal_mode_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/grid_size_spinner"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/allow_bonus_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/goal_mode_spinner"
            app:buttonTint="@color/primary_accent"
            android:textColor="@color/text_primary_light"
            android:textSize="20sp"
            android:text="@string/bonuses"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/allow_autocomplete_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/allow_bonus_checkbox"
            android:text="@string/auto_complete_math"
            app:buttonTint="@color/primary_accent"
            android:textColor="@color/text_primary_light"
            android:textSize="20sp"
            android:checked="true"/>

        <Button android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/play_button_text"
            android:textColor="@color/text_primary_light"
            android:background="@color/primary_accent"/>

    </RelativeLayout>


</FrameLayout>
